Blender 2.79a rc gpu vega 56 rendering failed #53962

Closed
opened 2018-01-31 14:20:29 +01:00 by Marcin Olejarski · 11 comments

System Information
Windows 10 proffesional Radeon Vega 56 driver 18.1.1

Blender Version
Broken: Blender 2.79a rc
Worked: 2.79 1eeb846

**Gpu rendering not working on Radeon Vega 56 test scene pavillon_barcelone_v1.2,
Render fails on any scene with the same console output...

console output:

Device init success
Compiling OpenCL program split
OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console.
OpenCL program split build output: source\kernel/geom/geom_object.h:173:48: error: no member named 'lamp' in 'struct ShaderData'

              Transform tfm = lamp_fetch_transform(kg, sd->lamp, false);
                                                       ~~  ^

source\kernel/kernel_shadow.h:470:49: warning: use of logical '&&' with constant operand

      if(!kernel_data.integrator.transparent_shadows &&
                                                     ^

source\kernel/kernel_shadow.h:470:49: note: use '&' for a bitwise operation

      if(!kernel_data.integrator.transparent_shadows &&
                                                     ^~
                                                     &

source\kernel/kernel_shadow.h:470:49: note: remove constant to silence this warning

      if(!kernel_data.integrator.transparent_shadows &&
                                                    ~^~

1 warning and 1 error generated.

error: Clang front-end compilation failed!
Frontend phase failed compilation.
Error: Compiling CL to IR**

**System Information** Windows 10 proffesional Radeon Vega 56 driver 18.1.1 **Blender Version** Broken: Blender 2.79a rc Worked: 2.79 1eeb846 **Gpu rendering not working on Radeon Vega 56 test scene pavillon_barcelone_v1.2, Render fails on any scene with the same console output... console output: Device init success Compiling OpenCL program split OpenCL build failed with error CL_BUILD_PROGRAM_FAILURE, errors in console. OpenCL program split build output: source\kernel/geom/geom_object.h:173:48: error: no member named 'lamp' in 'struct ShaderData' ``` Transform tfm = lamp_fetch_transform(kg, sd->lamp, false); ~~ ^ ``` source\kernel/kernel_shadow.h:470:49: warning: use of logical '&&' with constant operand ``` if(!kernel_data.integrator.transparent_shadows && ^ ``` source\kernel/kernel_shadow.h:470:49: note: use '&' for a bitwise operation ``` if(!kernel_data.integrator.transparent_shadows && ^~ & ``` source\kernel/kernel_shadow.h:470:49: note: remove constant to silence this warning ``` if(!kernel_data.integrator.transparent_shadows && ~^~ ``` 1 warning and 1 error generated. error: Clang front-end compilation failed! Frontend phase failed compilation. Error: Compiling CL to IR**

Added subscriber: @sarmath

Added subscriber: @sarmath

#54067 was marked as duplicate of this issue

#54067 was marked as duplicate of this issue

#53994 was marked as duplicate of this issue

#53994 was marked as duplicate of this issue

#53968 was marked as duplicate of this issue

#53968 was marked as duplicate of this issue

#53963 was marked as duplicate of this issue

#53963 was marked as duplicate of this issue
Brecht Van Lommel self-assigned this 2018-01-31 14:38:32 +01:00

Added subscriber: @ThomasCheng

Added subscriber: @ThomasCheng

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Thanks for reporting, fixed in 3e2909c.

Thanks for reporting, fixed in 3e2909c.
Member

Added subscriber: @VictorAlmeida-4

Added subscriber: @VictorAlmeida-4
Member

Added subscriber: @RUben

Added subscriber: @RUben
Member

Added subscriber: @AaronSmithey

Added subscriber: @AaronSmithey
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53962
No description provided.