Fix T53962: Cycles OpenCL compile error in some scenes.

This part of 212a8d9e needed to be ported over for 2ca933f to work.